<resources>
    <string name="app_name">Android In Kotlin</string>
    <string name="send">SEND</string>
    <string name="left_arrow"><![CDATA[<-]]></string>
    <string name="logo">LOGO</string>
    <string name="nav_main">首页</string>
    <string name="menu_main">menu main</string>
    <string name="nav_find">发现</string>
    <string name="nav_me">我的</string>
    <string name="me_menu_go">购物车</string>
    <string name="me_menu_yh">折扣券</string>
    <string name="me_menu_sail">优惠券</string>
    <string name="list_my_menu">我的订单</string>
    <string name="list_save">我的收藏</string>
    <string name="list_pwd">我的口令</string>
    <string name="list_my">我的锦囊</string>
    <string name="safe_center">安全中心</string>
    <string name="list_address">常用地址</string>
    <string name="list_service">客户服务</string>
    <string name="list_sug">建议反馈</string>
    <string name="list_setting">设置</string>
    <string name="login">登录</string>
    <string name="close">Close</string>
    <string name="login_account_hint">请输入用户名/邮箱/手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_button">登录</string>
    <string name="login_forgot_password_link">找回密码</string>
    <string name="login_register_link">免费注册</string>
    <string name="main_header_qr_scan">扫一扫</string>
    <string name="main_header_msg">消息</string>
    <string name="main_header_search_hint">目的地/酒店/景点/美食</string>
    <string name="main_carousel_index">main carousel index</string>
    <string name="menu_airport">飞机票</string>
    <string name="menu_car">汽车票</string>
    <string name="menu_course">领里程</string>
    <string name="menu_hatol">住酒店</string>
    <string name="menu_nearby">周边游</string>
    <string name="menu_train">火车票</string>
    <string name="menu_ticket">买门票</string>
    <string name="menu_trav">去旅游</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="menu_second_airport">专车服务</string>
    <string name="menu_second_play">四处游玩</string>
    <string name="menu_second_quan">游轮旅行</string>
    <string name="menu_second_service">签证服务</string>
    <string name="menu_second_ticket">国际机票</string>
    <string name="menu_second_wifi">网络服务</string>
</resources>