<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/mune"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#f0f0f0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nav_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/icon_nav_main_selector"
            android:text="@string/nav_main"
            android:textAlignment="center"
            android:textColor="#282828" />

        <TextView
            android:id="@+id/nav_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/icon_nav_find_selector"
            android:text="@string/nav_find"
            android:textAlignment="center"
            android:textColor="#282828" />

        <TextView
            android:id="@+id/nav_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/icon_nav_me_selector"
            android:text="@string/nav_me"
            android:textAlignment="center"
            android:textColor="#282828" />
    </LinearLayout>
</RelativeLayout>