<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/main_carousel"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:drawableTop="@drawable/icon_main_scan"
        android:text="@string/main_header_qr_scan"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/main_search"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:autofillHints="search"
        android:background="@color/main_search_background"
        android:drawableStart="@drawable/icon_main_search"
        android:hint="@string/main_header_search_hint"
        android:inputType="text"
        android:paddingHorizontal="6dp"
        app:layout_constraintEnd_toStartOf="@id/main_msg"
        app:layout_constraintStart_toEndOf="@+id/main_scan"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/main_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:drawableTop="@drawable/icon_main_msg"
        android:text="@string/main_header_msg"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>